--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Happy Valentines</title>
+  <title>Happy Valentines Oline</title>
   <link rel="stylesheet" href="./style.css">
   
 </head>
